Fix list spacing

--- a/src/components/List.module.scss
+++ b/src/components/List.module.scss
@@ -7,7 +7,7 @@
   max-width: 100%;
   text-decoration: none;
   min-height: 70px;
-  margin: 10px 5px;
+  margin: 8px 5px;
   padding: 2px 10px;
   border-radius: 5px;
   box-shadow: 0 2px 5px 0px rgba(0, 0, 0, 0.8);
